--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Acme&display=swap');
 :root{
-    --primary-color: #86C232;
-    --secondary-color:#24305E;
+    --primary-color: #0B0C10;
+    --secondary-color:#66FCF1;
     --btn-color: #374785;
 }
 *{
@@ -44,7 +44,7 @@
 }
 label{
     margin-top: 0.7rem;
-    color: var(--secondary-color);
+    color: var(--primary-color);
     font-size: 1.3rem;
     font-weight: 600;
     /* padding: 0.5rem; */
@@ -55,20 +55,20 @@ input{
     padding: 0.4rem;
     font-size: 0.8rem;
     font-weight: 600;
-    color: var(--secondary-color);
+    color: var(--primary-color);
     border-radius: 0.5rem;
     outline: none;
     /* border: none; */
-    border: 2px solid var(--primary-color);
-    border-bottom: 4px solid var(--primary-color);
+    border: 2px solid var(--secondary-color);
+    border-bottom: 4px solid var(--secondary-color);
 
 }
 button{
     width: 12rem;
     margin: 0.8rem;
     padding: 0.5rem;
-    background: var(--primary-color);
-    color: var(--secondary-color);
+    background: var(--secondary-color);
+    color: var(--primary-color);
     font-size: 1.4rem;
     font-weight: 600;
     border: none;
@@ -102,7 +102,7 @@ button{
     text-decoration: none;
 }
 .msg{
-    color: var(--secondary-color);
+    color: var(--primary-color);
     font-size: 1.2rem;
     font-weight: 600;
     padding: 0.3rem;
